added open api docs and swagger page